# ibl-sorter

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyks2.yml  pyproject.toml  release_notes.md  requirements.txt  setup.cfg  setup.py
docker/: Dockerfile  README.md  docker-compose.yaml  docker_compose.yaml  iblscripts_sort_recording.sh  run_ibl_recording.py  run_pid.py  run_pykilosort.sh  setup_nvidia_container_toolkit.sh
examples/: ibl_spikesorting_task.py  integration_100s.py  integration_hybrid_100s.py  run_ibl_recording.py  run_recording_with_custom_parameters.py  run_single_recording.py
iblsorter/: __init__.py  compare.py  datashift2.py  ibl.py  learn.py  main.py  params.py  postprocess.py  preprocess.py  qc.py  utils.py
iblsorter/examples/: iblsorter_parameters.yaml  run_ibl_recording.py  run_single_recording.py
iblsorter/io/: probes.py
integration/: README.md  config_template.yaml  ibl_spikesorting_task.py  integration_100s.py
pykilosort/: __init__.py  cluster.py  compare.py  datashift2.py  ibl.py  learn.py  main.py  params.py  postprocess.py  preprocess.py  qc.py  utils.py
pykilosort/viz/: qc.py
tests/: conftest.py  integration_100s.py  test_cluster.py  test_cptools.py  test_datashift2.py  test_event.py  test_mexWtW2.py  test_params.py  test_postprocess.py  test_preprocess.py  test_utils.py  test_whitening.py
viz/: qc.py  reports.py  requirements.txt
